--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -247,22 +247,28 @@ h1 {
     font-size: 49px;
   }
 }
-/* line 53, ../scss/_typography.scss */
+@media only all and (max-width: 767px) {
+  /* line 44, ../scss/_typography.scss */
+  h1 {
+    font-size: 42px;
+  }
+}
+/* line 56, ../scss/_typography.scss */
 h1 a {
   color: #0074a2;
 }
-/* line 55, ../scss/_typography.scss */
+/* line 58, ../scss/_typography.scss */
 h1 a:hover {
   color: white;
 }
 
-/* line 60, ../scss/_typography.scss */
+/* line 63, ../scss/_typography.scss */
 h2 {
   font-size: 230%;
   color: #0074a2;
 }
 
-/* line 65, ../scss/_typography.scss */
+/* line 68, ../scss/_typography.scss */
 h3 {
   margin: 0px 0 15px 0;
   padding: 5px 7px 5px;
@@ -281,14 +287,14 @@ h3 {
     } */
 }
 
-/* line 85, ../scss/_typography.scss */
+/* line 88, ../scss/_typography.scss */
 a {
   -webkit-transition: color, 0.25s;
   -moz-transition: color, 0.25s;
   -o-transition: color, 0.25s;
   transition: color, 0.25s;
 }
-/* line 87, ../scss/_typography.scss */
+/* line 90, ../scss/_typography.scss */
 a:hover {
   -webkit-transition: color, 0.25s;
   -moz-transition: color, 0.25s;
@@ -296,7 +302,7 @@ a:hover {
   transition: color, 0.25s;
 }
 
-/* line 91, ../scss/_typography.scss */
+/* line 94, ../scss/_typography.scss */
 p {
   color: #ccc;
   font-family: "Dosis", sans-serif;
