--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -50,6 +50,9 @@ h1 {
     @include max_desktop {
         font-size: 49px;
     }
+    @include max_tablet {
+        font-size: 42px;
+    }
     a{
         color: $blue;
         &:hover {
