--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1146,7 +1146,7 @@ a:hover {
 
 /* line 176, ../scss/custom.scss */
 .thumbnail {
-  min-height: 285px;
+  min-height: 250px;
   padding: 0;
   margin-bottom: 30px;
   -webkit-transition: all, 0s;
@@ -1154,16 +1154,16 @@ a:hover {
   -o-transition: all, 0s;
   transition: all, 0s;
 }
-@media only all and (min-width: 768px) and (max-width: 991px) {
-  /* line 176, ../scss/custom.scss */
-  .thumbnail {
-    min-height: 245px;
-  }
-}
 @media only all and (max-width: 991px) {
   /* line 176, ../scss/custom.scss */
   .thumbnail {
-    min-height: 245px;
+    min-height: 220px;
+  }
+}
+@media only all and (max-width: 767px) {
+  /* line 176, ../scss/custom.scss */
+  .thumbnail {
+    min-height: 230px;
   }
 }
 /* line 193, ../scss/custom.scss */
