--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -126,7 +126,7 @@
 
 .nav-previous {
     float: left;
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
 //  Buttons
@@ -135,13 +135,24 @@ button {
     margin-right: 10px !important;
 }
 .btn-primary {
-    background-color: $red;
-    border-color: $red;
+    // background-color: $red;
+    // border-color: $red;
     @include transition(background-color, 0.5s);
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
-    background-color: $blue;//lighten($red, 5%);
-    border-color: $blue;
+    background-color:   darken($blue, 13%);
+    border-color:       darken($blue, 13%);
+    
+    @include transition(background-color, 0.5s);
+}
+.btn-danger {
+    background-color:   $red;
+    border-color:       $red;
+    @include transition(background-color, 0.5s);
+}
+.btn-danger:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
+    background-color:   darken($red, 23%);
+    border-color:       darken($red, 23%);
     @include transition(background-color, 0.5s);
 }
 
