--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -286,15 +286,21 @@ h3 {
         @include transition (padding, 0.2s);
     } */
 }
+/* line 78, ../scss/_typography.scss */
+h3 i {
+  margin-right: 5px;
+  margin-top: 1px;
+  color: #0074a2;
+}
 
-/* line 88, ../scss/_typography.scss */
+/* line 94, ../scss/_typography.scss */
 a {
   -webkit-transition: color, 0.25s;
   -moz-transition: color, 0.25s;
   -o-transition: color, 0.25s;
   transition: color, 0.25s;
 }
-/* line 90, ../scss/_typography.scss */
+/* line 96, ../scss/_typography.scss */
 a:hover {
   -webkit-transition: color, 0.25s;
   -moz-transition: color, 0.25s;
@@ -302,7 +308,7 @@ a:hover {
   transition: color, 0.25s;
 }
 
-/* line 94, ../scss/_typography.scss */
+/* line 100, ../scss/_typography.scss */
 p {
   color: #ccc;
   font-family: "Dosis", sans-serif;
