playing with thumb styles

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -15,6 +15,7 @@ $blue:      #0074a2;
 $cyan:      #2ea2cc;
 $green:     #5cb85c;
 $yellow:    #f0ad4e;
+$rust: 		#F3BA64;
 
 $vm_blue:   #428bca;
 $vm_yellow: #f7b42c;
