--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -290,7 +290,7 @@ h3 {
 h3 i {
   margin-right: 5px;
   margin-top: 1px;
-  color: #0074a2;
+  color: #7e1e1b;
 }
 
 /* line 94, ../scss/_typography.scss */
@@ -1176,17 +1176,8 @@ a:hover {
   -moz-transition: all, 0s;
   -o-transition: all, 0s;
   transition: all, 0s;
-  /* @include max_laptop{
-      min-height: 220px;
-  }
-  @include max_tablet{
-      min-height: 230px;
-  }
-  @include max_phone {
-      min-height: 190px;
-  } */
 }
-/* line 195, ../scss/custom.scss */
+/* line 184, ../scss/custom.scss */
 .thumbnail h3 {
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
@@ -1197,29 +1188,38 @@ a:hover {
   -o-transition: padding, 0.5s;
   transition: padding, 0.5s;
 }
-/* line 199, ../scss/custom.scss */
+/* line 189, ../scss/custom.scss */
 .thumbnail img {
   height: auto !important;
+  border: 3px solid black;
 }
 @media only all and (max-width: 767px) {
-  /* line 199, ../scss/custom.scss */
+  /* line 189, ../scss/custom.scss */
   .thumbnail img {
     width: 100% !important;
   }
 }
-/* line 207, ../scss/custom.scss */
+/* line 198, ../scss/custom.scss */
 .thumbnail .thumb-content {
   background-color: black;
 }
-/* line 211, ../scss/custom.scss */
+/* line 202, ../scss/custom.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 224, ../scss/custom.scss */
+  /* line 211, ../scss/custom.scss */
+  .thumbnail:hover img {
+    border: 3px solid #004f6f;
+    -webkit-transition: border, 0.5s;
+    -moz-transition: border, 0.5s;
+    -o-transition: border, 0.5s;
+    transition: border, 0.5s;
+  }
+  /* line 215, ../scss/custom.scss */
   .thumbnail:hover h3 {
-    background: #d2322d;
+    background: #004f6f;
     -webkit-transition: background-color, 0.2s;
     -moz-transition: background-color, 0.2s;
     -o-transition: background-color, 0.2s;
@@ -1229,20 +1229,24 @@ a:hover {
     -o-transition: padding, 0.2s;
     transition: padding, 0.2s;
   }
+  /* line 222, ../scss/custom.scss */
+  .thumbnail:hover i {
+    color: white;
+  }
 }
 
-/* line 234, ../scss/custom.scss */
+/* line 229, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
 
-/* line 242, ../scss/custom.scss */
+/* line 237, ../scss/custom.scss */
 .above-header {
   height: 500px;
   background-color: black;
 }
 
-/* line 247, ../scss/custom.scss */
+/* line 242, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1250,30 +1254,30 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 253, ../scss/custom.scss */
+/* line 248, ../scss/custom.scss */
 .visit-site {
   margin: 40px 0;
 }
 
-/* line 257, ../scss/custom.scss */
+/* line 252, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
 }
 @media only all and (max-width: 991px) {
-  /* line 257, ../scss/custom.scss */
+  /* line 252, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 257, ../scss/custom.scss */
+  /* line 252, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 269, ../scss/custom.scss */
+/* line 264, ../scss/custom.scss */
 .portfolio-desc {
   padding: 15px 0 45px 0;
 }
@@ -1281,16 +1285,16 @@ a:hover {
 /* 
  *  Soliloquy Slider 
  */
-/* line 278, ../scss/custom.scss */
+/* line 273, ../scss/custom.scss */
 .soliloquy-container img {
   width: 100%;
   height: auto;
 }
-/* line 282, ../scss/custom.scss */
+/* line 277, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 285, ../scss/custom.scss */
+/* line 280, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1299,7 +1303,7 @@ a:hover {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 290, ../scss/custom.scss */
+/* line 285, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1309,7 +1313,7 @@ a:hover {
   transition: opacity, 0.5s;
 }
 
-/* line 297, ../scss/custom.scss */
+/* line 292, ../scss/custom.scss */
 .design-slider {
   margin: 26px 0;
 }
@@ -1318,13 +1322,13 @@ a:hover {
  *  Twitter feed 
  */
 @media only all and (max-width: 991px) {
-  /* line 307, ../scss/custom.scss */
+  /* line 302, ../scss/custom.scss */
   .kmeta {
     font-size: 15px;
   }
 }
 
-/* line 312, ../scss/custom.scss */
+/* line 307, ../scss/custom.scss */
 .ktext {
   line-height: 19px !important;
   margin: 15px 0 !important;
@@ -1333,17 +1337,17 @@ a:hover {
 /* 
  *  Contact Form 
  */
-/* line 323, ../scss/custom.scss */
+/* line 318, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 326, ../scss/custom.scss */
+/* line 321, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #2ea2cc;
 }
 
-/* line 332, ../scss/custom.scss */
+/* line 327, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #0074a2;
   background-color: #0074a2;
@@ -1353,7 +1357,7 @@ a:hover {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 337, ../scss/custom.scss */
+/* line 332, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #2ea2cc;
   -webkit-transition: background-color, 0.25s;
@@ -1365,105 +1369,105 @@ a:hover {
 /* 
  *  Media Queries thumbs
  */
-/* line 348, ../scss/custom.scss */
+/* line 343, ../scss/custom.scss */
 .mq-list {
   padding-top: 30px;
 }
-/* line 350, ../scss/custom.scss */
+/* line 345, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 350, ../scss/custom.scss */
+  /* line 345, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 350, ../scss/custom.scss */
+  /* line 345, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 350, ../scss/custom.scss */
+  /* line 345, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 365, ../scss/custom.scss */
+/* line 360, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 365, ../scss/custom.scss */
+  /* line 360, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 365, ../scss/custom.scss */
+  /* line 360, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 374, ../scss/custom.scss */
+/* line 369, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 374, ../scss/custom.scss */
+  /* line 369, ../scss/custom.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 380, ../scss/custom.scss */
+/* line 375, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 383, ../scss/custom.scss */
+/* line 378, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 390, ../scss/custom.scss */
+/* line 385, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
 }
-/* line 393, ../scss/custom.scss */
+/* line 388, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 400, ../scss/custom.scss */
+/* line 395, ../scss/custom.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 406, ../scss/custom.scss */
+  /* line 401, ../scss/custom.scss */
   .credits td {
     padding: 1px !important;
   }
 }
 
-/* line 412, ../scss/custom.scss */
+/* line 407, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 416, ../scss/custom.scss */
+/* line 411, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
-/* line 420, ../scss/custom.scss */
+/* line 415, ../scss/custom.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 425, ../scss/custom.scss */
+/* line 420, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
@@ -1471,16 +1475,16 @@ a:hover {
 /* 
  *  Footer
  */
-/* line 435, ../scss/custom.scss */
+/* line 430, ../scss/custom.scss */
 #root-footer, #footer {
   height: 300px;
 }
-/* line 437, ../scss/custom.scss */
+/* line 432, ../scss/custom.scss */
 #root-footer p, #footer p {
   color: #666;
 }
 
-/* line 441, ../scss/custom.scss */
+/* line 436, ../scss/custom.scss */
 #footer {
   background-color: #000;
   height: 300px;
@@ -1515,7 +1519,7 @@ html, body {
 /*
  *  Admin Menu 
  */
-/* line 453, ../scss/custom.scss */
+/* line 448, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
