--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -78,7 +78,7 @@ h3 {
     i {
         margin-right: 5px;
         margin-top: 1px;
-        color: $blue;
+        color: darken($red, 20%);
     }
 
     /* @include transition (background, 0.75s);
