fixed thumbnail min-height issue (grid fail) by adding min-height to thumb-title rather than entire thumbnail

--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -25,19 +25,19 @@ $tablet_landscape:          $laptop;
  */
 
 // min breakpoint
-@mixin bp_min($breakpoint, $media: all) {
+@mixin min($breakpoint, $media: all) {
     @media only #{$media} and (min-width: $breakpoint) {
         @content;
     }
 }
 // max breakpoint
-@mixin bp_max($breakpoint, $media: all) {
+@mixin max($breakpoint, $media: all) {
     @media only #{$media} and (max-width: $breakpoint - 1) {
         @content;
     }
 }
 // min & max breakpoints
-@mixin bp_between($breakpoint, $breakpoint2, $media: all) {
+@mixin between($breakpoint, $breakpoint2, $media: all) {
     @media only #{$media} and (min-width: $breakpoint) and (max-width: $breakpoint2 - 1) {
         @content;
     }
@@ -49,20 +49,20 @@ $tablet_landscape:          $laptop;
  */
 
 
-@mixin pager {                      @include bp_max(        $mobile_portrait)                                   {@content;}}    // > 320
-@mixin phone {                      @include bp_between(    $mobile_portrait,       $mobile_landscape)          {@content;}}    // > 480
-@mixin tablet {                     @include bp_between(    $mobile_landscape,      $tablet_portrait)           {@content;}}    // 480 -> 768
-@mixin laptop {                     @include bp_between(    $tablet_portrait,       $laptop)                    {@content;}}    // 768 -> 992
-@mixin desktop {                    @include bp_between(    $laptop,                $desktop)                   {@content;}}    // 992 -> 1200
-@mixin monitor {                    @include bp_between(    $desktop,               $monitor)                   {@content;}}    // 1200 -> 1600
-@mixin infinity {                   @include bp_min(        $monitor)                                           {@content;}}    // 1600 -> infinity
+@mixin pager {                      @include max(        $mobile_portrait)                                   {@content;}}    // > 320
+@mixin phone {                      @include between(    $mobile_portrait,       $mobile_landscape)          {@content;}}    // > 480
+@mixin tablet {                     @include between(    $mobile_landscape,      $tablet_portrait)           {@content;}}    // 480 -> 768
+@mixin laptop {                     @include between(    $tablet_portrait,       $laptop)                    {@content;}}    // 768 -> 992
+@mixin desktop {                    @include between(    $laptop,                $desktop)                   {@content;}}    // 992 -> 1200
+@mixin monitor {                    @include between(    $desktop,               $monitor)                   {@content;}}    // 1200 -> 1600
+@mixin infinity {                   @include min(        $monitor)                                           {@content;}}    // 1600 -> infinity
 
-@mixin mobile_portrait {            @include bp_max(        $mobile_portrait)                                   {@content;}}    // > 320
-@mixin mobile_landscape {           @include bp_between(    $mobile_portrait,       $mobile_landscape)          {@content;}}    // > 480
-@mixin tablet_portrait {            @include bp_between(    $mobile_landscape,      $tablet_portrait)           {@content;}}    // 480 -> 768
-@mixin tablet_landscape {           @include bp_between(    $tablet_portrait,       $tablet_landscape)          {@content;}}    // 768 -> 1024
-@mixin small_tablet_portrait {      @include bp_between(    $mobile_landscape,      $small_tablet_portrait)     {@content;}}    // 600 -> 768
-@mixin small_tablet_landscape {     @include bp_between(    $small_tablet_portrait, $small_tablet_landscape)    {@content;}}    // 768 -> 1024
+@mixin mobile_portrait {            @include max(        $mobile_portrait)                                   {@content;}}    // > 320
+@mixin mobile_landscape {           @include between(    $mobile_portrait,       $mobile_landscape)          {@content;}}    // > 480
+@mixin tablet_portrait {            @include between(    $mobile_landscape,      $tablet_portrait)           {@content;}}    // 480 -> 768
+@mixin tablet_landscape {           @include between(    $tablet_portrait,       $tablet_landscape)          {@content;}}    // 768 -> 1024
+@mixin small_tablet_portrait {      @include between(    $mobile_landscape,      $small_tablet_portrait)     {@content;}}    // 600 -> 768
+@mixin small_tablet_landscape {     @include between(    $small_tablet_portrait, $small_tablet_landscape)    {@content;}}    // 768 -> 1024
 
 
 /*
@@ -71,55 +71,55 @@ $tablet_landscape:          $laptop;
 
 
 // Pager
-@mixin min_pager {                  @include bp_min($pager) {@content;}}
-@mixin max_pager {                  @include bp_max($pager) {@content;}}
+@mixin min_pager {                  @include min($pager) {@content;}}
+@mixin max_pager {                  @include max($pager) {@content;}}
 
 // Phone
-@mixin min_phone {                  @include bp_min($phone) {@content;}}
-@mixin max_phone {                  @include bp_max($phone) {@content;}}
+@mixin min_phone {                  @include min($phone) {@content;}}
+@mixin max_phone {                  @include max($phone) {@content;}}
 
 // Tablet
-@mixin min_tablet {                 @include bp_min($tablet) {@content;}}
-@mixin max_tablet {                 @include bp_max($tablet) {@content;}}
+@mixin min_tablet {                 @include min($tablet) {@content;}}
+@mixin max_tablet {                 @include max($tablet) {@content;}}
 
 // Tablet Small
-@mixin min_tablet_sm {             	@include bp_min($tablet_sm) {@content;}}
-@mixin max_tablet_sm {             	@include bp_max($tablet_sm) {@content;}}
+@mixin min_tablet_sm {             	@include min($tablet_sm) {@content;}}
+@mixin max_tablet_sm {             	@include max($tablet_sm) {@content;}}
 
 // Laptop
-@mixin min_laptop {                 @include bp_min($laptop) {@content;}}
-@mixin max_laptop {                 @include bp_max($laptop) {@content;}}
+@mixin min_laptop {                 @include min($laptop) {@content;}}
+@mixin max_laptop {                 @include max($laptop) {@content;}}
 
 // Desktop
-@mixin min_desktop {                @include bp_min($desktop) {@content;}}
-@mixin max_desktop {                @include bp_max($desktop) {@content;}}
+@mixin min_desktop {                @include min($desktop) {@content;}}
+@mixin max_desktop {                @include max($desktop) {@content;}}
 
 // Monitor
-@mixin min_monitor {                @include bp_min($monitor) {@content;}}
-@mixin max_monitor {                @include bp_max($monitor) {@content;}}
+@mixin min_monitor {                @include min($monitor) {@content;}}
+@mixin max_monitor {                @include max($monitor) {@content;}}
 
 
 // Mobile portrait
-@mixin min_phone_portrait {         @include bp_min($mobile_portrait) {@content;}}
-@mixin max_phone_portrait {         @include bp_max($mobile_portrait) {@content;}}
+@mixin min_phone_portrait {         @include min($mobile_portrait) {@content;}}
+@mixin max_phone_portrait {         @include max($mobile_portrait) {@content;}}
 
 // MObile landscape:
-@mixin min_phone_landscape {        @include bp_min($mobile_landscape) {@content;}}
-@mixin max_phone_landscape {        @include bp_max($mobile_landscape) {@content;}}
+@mixin min_phone_landscape {        @include min($mobile_landscape) {@content;}}
+@mixin max_phone_landscape {        @include max($mobile_landscape) {@content;}}
 
 // Tablet portrait:
-@mixin min_tablet_portrait {        @include bp_min($tablet_portrait) {@content;}}
-@mixin max_tablet_portrait {        @include bp_max($tablet_portrait) {@content;}}
+@mixin min_tablet_portrait {        @include min($tablet_portrait) {@content;}}
+@mixin max_tablet_portrait {        @include max($tablet_portrait) {@content;}}
 
 // Tablet landscape:
-@mixin min_tablet_landscape {       @include bp_min($tablet_landscape) {@content;}}
-@mixin max_tablet_landscape {       @include bp_max($tablet_landscape) {@content;}}
+@mixin min_tablet_landscape {       @include min($tablet_landscape) {@content;}}
+@mixin max_tablet_landscape {       @include max($tablet_landscape) {@content;}}
 
 // Small tablet portrait:
-@mixin min_small_tablet_portrait {  @include bp_min($small_tablet_portrait) {@content;}}
-@mixin max_small_tablet_portrait {  @include bp_max($small_tablet_portrait) {@content;}}
+@mixin min_small_tablet_portrait {  @include min($small_tablet_portrait) {@content;}}
+@mixin max_small_tablet_portrait {  @include max($small_tablet_portrait) {@content;}}
 
 // Small tablet landscape:
-@mixin min_small_tablet_landscape { @include bp_min($small_tablet_landscape) {@content;}}
-@mixin max_small_tablet_landscape { @include bp_max($small_tablet_landscape) {@content;}}
+@mixin min_small_tablet_landscape { @include min($small_tablet_landscape) {@content;}}
+@mixin max_small_tablet_landscape { @include max($small_tablet_landscape) {@content;}}
 
