--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -194,7 +194,7 @@ code, pre, .highlight {
 }
 
 /* line 88, ../scss/_mixins.scss */
-.thumbnail .thumb-content {
+.thumbnail h3 {
   -webkit-box-shadow: 0px 2px 20px black;
   -moz-box-shadow: 0px 2px 20px black;
   box-shadow: 0px 2px 20px black;
@@ -623,7 +623,7 @@ code, pre, .highlight {
 }
 
 /* line 88, ../scss/_mixins.scss */
-.thumbnail .thumb-content {
+.thumbnail h3 {
   -webkit-box-shadow: 0px 2px 20px black;
   -moz-box-shadow: 0px 2px 20px black;
   box-shadow: 0px 2px 20px black;
@@ -881,7 +881,7 @@ code, pre, .highlight {
 }
 
 /* line 88, ../scss/_mixins.scss */
-.thumbnail .thumb-content {
+.thumbnail h3 {
   -webkit-box-shadow: 0px 2px 20px black;
   -moz-box-shadow: 0px 2px 20px black;
   box-shadow: 0px 2px 20px black;
@@ -1159,7 +1159,7 @@ a:hover {
   margin-left: -15px;
   margin-right: -15px;
 }
-@media only all and (max-width: 319px) {
+@media only all and (max-width: 320px) {
   /* line 168, ../scss/custom.scss */
   .row-thumbnails li {
     width: 100% !important;
@@ -1171,13 +1171,13 @@ a:hover {
 /* line 176, ../scss/custom.scss */
 .thumbnail {
   padding: 0;
-  margin-bottom: 30px;
+  margin-bottom: 1%;
   -webkit-transition: all, 0s;
   -moz-transition: all, 0s;
   -o-transition: all, 0s;
   transition: all, 0s;
 }
-/* line 184, ../scss/custom.scss */
+/* line 183, ../scss/custom.scss */
 .thumbnail h3 {
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
@@ -1187,21 +1187,18 @@ a:hover {
   -moz-transition: padding, 0.5s;
   -o-transition: padding, 0.5s;
   transition: padding, 0.5s;
+  background-color: black;
 }
-/* line 189, ../scss/custom.scss */
+/* line 190, ../scss/custom.scss */
 .thumbnail img {
   height: auto !important;
   border: 3px solid black;
 }
 @media only all and (max-width: 767px) {
-  /* line 189, ../scss/custom.scss */
+  /* line 190, ../scss/custom.scss */
   .thumbnail img {
     width: 100% !important;
   }
-}
-/* line 198, ../scss/custom.scss */
-.thumbnail .thumb-content {
-  background-color: black;
 }
 /* line 202, ../scss/custom.scss */
 .thumbnail .caption {
@@ -1235,18 +1232,29 @@ a:hover {
   }
 }
 
-/* line 229, ../scss/custom.scss */
+/* line 228, ../scss/custom.scss */
+.thumb-title {
+  min-height: 58px;
+}
+@media only all and (max-width: 320px) {
+  /* line 228, ../scss/custom.scss */
+  .thumb-title {
+    min-height: 35px;
+  }
+}
+
+/* line 236, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
 
-/* line 237, ../scss/custom.scss */
+/* line 244, ../scss/custom.scss */
 .above-header {
   height: 500px;
   background-color: black;
 }
 
-/* line 242, ../scss/custom.scss */
+/* line 249, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1254,30 +1262,30 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 248, ../scss/custom.scss */
+/* line 255, ../scss/custom.scss */
 .visit-site {
   margin: 40px 0;
 }
 
-/* line 252, ../scss/custom.scss */
+/* line 259, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
 }
 @media only all and (max-width: 991px) {
-  /* line 252, ../scss/custom.scss */
+  /* line 259, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 252, ../scss/custom.scss */
+  /* line 259, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 264, ../scss/custom.scss */
+/* line 271, ../scss/custom.scss */
 .portfolio-desc {
   padding: 15px 0 45px 0;
 }
@@ -1285,16 +1293,16 @@ a:hover {
 /* 
  *  Soliloquy Slider 
  */
-/* line 273, ../scss/custom.scss */
+/* line 280, ../scss/custom.scss */
 .soliloquy-container img {
   width: 100%;
   height: auto;
 }
-/* line 277, ../scss/custom.scss */
+/* line 284, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 280, ../scss/custom.scss */
+/* line 287, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1303,7 +1311,7 @@ a:hover {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 285, ../scss/custom.scss */
+/* line 292, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1313,7 +1321,7 @@ a:hover {
   transition: opacity, 0.5s;
 }
 
-/* line 292, ../scss/custom.scss */
+/* line 299, ../scss/custom.scss */
 .design-slider {
   margin: 26px 0;
 }
@@ -1322,13 +1330,13 @@ a:hover {
  *  Twitter feed 
  */
 @media only all and (max-width: 991px) {
-  /* line 302, ../scss/custom.scss */
+  /* line 309, ../scss/custom.scss */
   .kmeta {
     font-size: 15px;
   }
 }
 
-/* line 307, ../scss/custom.scss */
+/* line 314, ../scss/custom.scss */
 .ktext {
   line-height: 19px !important;
   margin: 15px 0 !important;
@@ -1337,17 +1345,17 @@ a:hover {
 /* 
  *  Contact Form 
  */
-/* line 318, ../scss/custom.scss */
+/* line 325, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 321, ../scss/custom.scss */
+/* line 328, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #2ea2cc;
 }
 
-/* line 327, ../scss/custom.scss */
+/* line 334, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #0074a2;
   background-color: #0074a2;
@@ -1357,7 +1365,7 @@ a:hover {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 332, ../scss/custom.scss */
+/* line 339, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #2ea2cc;
   -webkit-transition: background-color, 0.25s;
@@ -1369,105 +1377,105 @@ a:hover {
 /* 
  *  Media Queries thumbs
  */
-/* line 343, ../scss/custom.scss */
+/* line 350, ../scss/custom.scss */
 .mq-list {
   padding-top: 30px;
 }
-/* line 345, ../scss/custom.scss */
+/* line 352, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 345, ../scss/custom.scss */
+  /* line 352, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 345, ../scss/custom.scss */
+  /* line 352, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 345, ../scss/custom.scss */
+  /* line 352, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 360, ../scss/custom.scss */
+/* line 367, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 360, ../scss/custom.scss */
+  /* line 367, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 360, ../scss/custom.scss */
+  /* line 367, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 369, ../scss/custom.scss */
+/* line 376, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 369, ../scss/custom.scss */
+  /* line 376, ../scss/custom.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 375, ../scss/custom.scss */
+/* line 382, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 378, ../scss/custom.scss */
+/* line 385, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 385, ../scss/custom.scss */
+/* line 392, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
 }
-/* line 388, ../scss/custom.scss */
+/* line 395, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 395, ../scss/custom.scss */
+/* line 402, ../scss/custom.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 401, ../scss/custom.scss */
+  /* line 408, ../scss/custom.scss */
   .credits td {
     padding: 1px !important;
   }
 }
 
-/* line 407, ../scss/custom.scss */
+/* line 414, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 411, ../scss/custom.scss */
+/* line 418, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
-/* line 415, ../scss/custom.scss */
+/* line 422, ../scss/custom.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 420, ../scss/custom.scss */
+/* line 427, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
@@ -1475,16 +1483,16 @@ a:hover {
 /* 
  *  Footer
  */
-/* line 430, ../scss/custom.scss */
+/* line 437, ../scss/custom.scss */
 #root-footer, #footer {
   height: 300px;
 }
-/* line 432, ../scss/custom.scss */
+/* line 439, ../scss/custom.scss */
 #root-footer p, #footer p {
   color: #666;
 }
 
-/* line 436, ../scss/custom.scss */
+/* line 443, ../scss/custom.scss */
 #footer {
   background-color: #000;
   height: 300px;
@@ -1519,7 +1527,7 @@ html, body {
 /*
  *  Admin Menu 
  */
-/* line 448, ../scss/custom.scss */
+/* line 455, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
